1A/S6/Lang_C/Projet/checkerror.log
Vérification de la syntaxe pour liste_noeud.h :
gcc -std=c99 -c -Wall -Wextra -pedantic -Werror -fsyntax-only -x c liste_noeud.h
Vérification de la syntaxe pour liste_noeud.c :
gcc -std=c99 -c -Wall -Wextra -pedantic -Werror -fsyntax-only -x c liste_noeud.c
liste_noeud.c: In function 'contient_noeud_liste':
liste_noeud.c:53:25: error: comparison of integer expressions of different signedness: 'noeud_id_t' {aka 'long unsigned int'} and 'int' [-Werror=sign-compare]
   53 |         if (prec->noeud == id_noeud) {
      |                         ^~
liste_noeud.c: In function 'contient_arrete_liste':
liste_noeud.c:69:24: error: comparison of integer expressions of different signedness: 'noeud_id_t' {aka 'long unsigned int'} and 'int' [-Werror=sign-compare]
   69 |         if (act->noeud == source && act->prec == destination) {
      |                        ^~
liste_noeud.c:69:47: error: comparison of integer expressions of different signedness: 'noeud_id_t' {aka 'long unsigned int'} and 'int' [-Werror=sign-compare]
   69 |         if (act->noeud == source && act->prec == destination) {
      |                                               ^~
liste_noeud.c: In function 'distance_noeud_liste':
liste_noeud.c:83:24: error: comparison of integer expressions of different signedness: 'noeud_id_t' {aka 'long unsigned int'} and 'int' [-Werror=sign-compare]
   83 |         if (act->noeud == noeud) {
      |                        ^~
liste_noeud.c:86:13: error: assignment to 'noeud_t *' from 'noeud_id_t' {aka 'long unsigned int'} makes pointer from integer without a cast [-Werror=int-conversion]
   86 |         act = act->prec;
      |             ^
liste_noeud.c: In function 'precedent_noeud_liste':
liste_noeud.c:99:29: error: comparison of integer expressions of different signedness: 'noeud_id_t' {aka 'long unsigned int'} and 'int' [-Werror=sign-compare]
   99 |         if (suivante->noeud == noeud) {
      |                             ^~
liste_noeud.c:102:18: error: assignment to 'noeud_t *' from 'noeud_id_t' {aka 'long unsigned int'} makes pointer from integer without a cast [-Werror=int-conversion]
  102 |         suivante = suivante->prec;
      |                  ^
liste_noeud.c: In function 'min_noeud_liste':
liste_noeud.c:120:13: error: assignment to 'noeud_t *' from 'noeud_id_t' {aka 'long unsigned int'} makes pointer from integer without a cast [-Werror=int-conversion]
  120 |         act = act->prec;
      |             ^
liste_noeud.c:122:12: error: returning 'noeud_t *' from a function with return type 'int' makes integer from pointer without a cast [-Werror=int-conversion]
  122 |     return id_min;
      |            ^~~~~~
liste_noeud.c: In function 'inserer_noeud_liste':
liste_noeud.c:137:25: error: assignment to 'noeud_id_t' {aka 'long unsigned int'} from 'void *' makes integer from pointer without a cast [-Werror=int-conversion]
  137 |     nouveau_noeud->prec = NULL;
      |                         ^
liste_noeud.c:148:24: error: comparison of integer expressions of different signedness: 'noeud_id_t' {aka 'long unsigned int'} and 'int' [-Werror=sign-compare]
  148 |         if (act->noeud == precedent) {
      |                        ^~
liste_noeud.c:149:33: error: assignment to 'noeud_id_t' {aka 'long unsigned int'} from 'noeud_t *' makes integer from pointer without a cast [-Werror=int-conversion]
  149 |             nouveau_noeud->prec = act; // MAJ du paramètre prec du nouveau noeud pour que ça soit le noeud
      |                                 ^
liste_noeud.c:151:23: error: assignment to 'noeud_id_t' {aka 'long unsigned int'} from 'noeud_t *' makes integer from pointer without a cast [-Werror=int-conversion]
  151 |             act->prec = nouveau_noeud; // Insérer le nouveau noeud après le noeud précédent
      |                       ^
liste_noeud.c:154:13: error: assignment to 'noeud_t *' from 'noeud_id_t' {aka 'long unsigned int'} makes pointer from integer without a cast [-Werror=int-conversion]
  154 |         act = act->prec;
      |             ^
liste_noeud.c:159:22: error: comparison between pointer and integer [-Werror]
  159 |     while (act->prec != NULL) {
      |                      ^~
liste_noeud.c:160:13: error: assignment to 'noeud_t *' from 'noeud_id_t' {aka 'long unsigned int'} makes pointer from integer without a cast [-Werror=int-conversion]
  160 |         act = act->prec;
      |             ^
liste_noeud.c:162:15: error: assignment to 'noeud_id_t' {aka 'long unsigned int'} from 'noeud_t *' makes integer from pointer without a cast [-Werror=int-conversion]
  162 |     act->prec = nouveau_noeud; // Ajouter le nouveau noeud à la fin
      |               ^
liste_noeud.c: In function 'changer_noeud_liste':
liste_noeud.c:175:24: error: comparison of integer expressions of different signedness: 'noeud_id_t' {aka 'long unsigned int'} and 'int' [-Werror=sign-compare]
  175 |         if (act->noeud == noeud) {
      |                        ^~
liste_noeud.c:178:23: error: assignment to 'noeud_id_t' {aka 'long unsigned int'} from 'int *' makes integer from pointer without a cast [-Werror=int-conversion]
  178 |             act->prec = &precedent;
      |                       ^
liste_noeud.c: In function 'supprimer_noeud_liste':
liste_noeud.c:192:38: error: comparison of integer expressions of different signedness: 'noeud_id_t' {aka 'long unsigned int'} and 'int' [-Werror=sign-compare]
  192 |     while (act != NULL && act->noeud == noeud) {
      |                                      ^~
liste_noeud.c:194:13: error: assignment to 'noeud_t *' from 'noeud_id_t' {aka 'long unsigned int'} makes pointer from integer without a cast [-Werror=int-conversion]
  194 |         act = act->prec; // On a donc dans act le noeud actuel qu'il faut supprimer
      |             ^
liste_noeud.c:202:27: error: assignment to 'noeud_t *' from 'noeud_id_t' {aka 'long unsigned int'} makes pointer from integer without a cast [-Werror=int-conversion]
  202 |         liste_noeud->tete = act->prec; // Effectivement, la nouvelle tête est le precedent
      |                           ^
cc1: all warnings being treated as errors
Vérification de la syntaxe pour dijkstra.h :
gcc -std=c99 -c -Wall -Wextra -pedantic -Werror -fsyntax-only -x c dijkstra.h
Vérification de la syntaxe pour dijkstra.c :
gcc -std=c99 -c -Wall -Wextra -pedantic -Werror -fsyntax-only -x c dijkstra.c
dijkstra.c: In function 'dijkstra':
dijkstra.c:25:28: error: unused parameter 'graphe' [-Werror=unused-parameter]
   25 |     const struct graphe_t* graphe,
      |     ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
dijkstra.c:26:16: error: unused parameter 'source' [-Werror=unused-parameter]
   26 |     noeud_id_t source, noeud_id_t destination,
      |     ~~~~~~~~~~~^~~~~~
dijkstra.c:26:35: error: unused parameter 'destination' [-Werror=unused-parameter]
   26 |     noeud_id_t source, noeud_id_t destination,
      |                        ~~~~~~~~~~~^~~~~~~~~~~
dijkstra.c:27:21: error: unused parameter 'chemin' [-Werror=unused-parameter]
   27 |     liste_noeud_t** chemin) {
      |     ~~~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
